# easy-mail-backend

./: README.md  manage.py  pyproject.toml
easy_mail/: asgi.py  settings.py  urls.py  wsgi.py
src/accounts/: admin.py  apps.py  managers.py  models.py  serializers.py  urls.py
src/accounts/migrations/: 0001_initial.py
src/accounts/serializers/: __init__.py  auth_serializer.py  user_serializers.py
src/accounts/views/: __init__.py  auth_view.py  login_view.py  logout_view.py  user_viewset.py
src/contacts/: urls.py
src/contacts/admin/: __init__.py  recipient_admin.py  recipient_group_admin.py
src/contacts/migrations/: 0001_initial.py  0002_recipientgroupmodel.py
src/contacts/models/: __init__.py  recipient_group_model.py  recipient_model.py
src/contacts/serializers/: __init__.py  recipient_group_serializer.py  recipient_serializer.py
src/contacts/views/: __init__.py  recipient_group_viewset.py  recipients_viewset.py
src/core/: permissions.py
src/inbox/: admin.py  apps.py  urls.py
src/inbox/admin/: __init__.py  template_admin.py
src/inbox/migrations/: 0001_initial.py
src/inbox/models/: __init__.py  template_model.py
src/inbox/serializers/: __init__.py  template_serializer.py
src/inbox/views/: __init__.py  template_viewset.py
src/recipient/: admin.py  apps.py  models.py
src/recipient/migrations/: 0001_initial.py
src/recipient_group/: admin.py  apps.py  models.py
src/recipient_group/migrations/: 0001_initial.py
src/template/: apps.py  models.py
