[tool.poetry]
name = "easy-mail-backend"
version = "0.1.0"
description = "Django REST backend API SERVICE for Easy Mail project."
authors = ["Rodrigo Almeida <c.almeidarodrigo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.7.0"
drf-spectacular = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
